used OAuth to login via gitHub

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,5 +13,5 @@
     </div>
 </form>
 <p>
-  <a href="/signup">Create an Account &rarr;</a>
+  <a href="/signup">Create an Account &rarr;</a>  <a href="/auth/github">Login with GitHub</a>
 <p>
